--- a/nbs/session5.ipynb
+++ b/nbs/session5.ipynb
@@ -17,9 +17,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'utils'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/work/VA/cds_vis/nbs/session5.ipynb Cell 3\u001b[0m line \u001b[0;36m7\n\u001b[1;32m      <a href='vscode-notebook-cell://app-5022944-0.cloud.sdu.dk/work/VA/cds_vis/nbs/session5.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# Import teaching utils\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://app-5022944-0.cloud.sdu.dk/work/VA/cds_vis/nbs/session5.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://app-5022944-0.cloud.sdu.dk/work/VA/cds_vis/nbs/session5.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mutils\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mclassifier_utils\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mclf_util\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://app-5022944-0.cloud.sdu.dk/work/VA/cds_vis/nbs/session5.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39m# Import sklearn metrics\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://app-5022944-0.cloud.sdu.dk/work/VA/cds_vis/nbs/session5.ipynb#W2sdnNjb2RlLXJlbW90ZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m \u001b[39mimport\u001b[39;00m metrics\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'utils'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -552,7 +564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.12"
   },
   "vscode": {
    "interpreter": {
